<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Elementum Yelp - Ashish</string>
    <string name="no_result">No Results Found</string>
    <string name="loading">Loading</string>
    <string name="reviews">Reviews</string>
    <string name="search_error">Error. Please try again</string>
    <string name="input_error">Input Error</string>
    <string name="search_what">What</string>
    <string name="search_where">Where</string>
    <string name="search">Search</string>
    <string name="not_connected">Not Connected to Internet</string>
    <string name="enter_text">Enter Text</string>
    <string name="enter_location">Enter Location</string>
</resources>
