<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <LinearLayout
            android:id="@+id/what_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5" >

            <TextView
                android:id="@+id/id_what_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_what"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/id_what"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
				android:hint="@string/enter_text"
				android:layout_weight="4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/where_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/what_layout"
            android:orientation="horizontal"
            android:weightSum="5" >

            <TextView
                android:id="@+id/id_where_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_where"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/id_where"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="@string/enter_location"
                android:layout_weight="4" />
        </LinearLayout>

        <Button
            android:id="@+id/id_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/where_layout"
            android:layout_centerHorizontal="true"
            android:text="@string/search" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_result_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:indeterminate="true" />

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/loading"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/no_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_result"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dip"
            android:padding="0dp"
            android:scrollbarStyle="insideOverlay"
            android:scrollingCache="true"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>